--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "file-type": "^9.0.0",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "mysql": "^2.16.0",
     "nodemon": "^1.18.4"
   },
   "description": "Api of ImageServer Intelehealth",
